<resources>
    <string name="app_name">TastyPizzaClient</string>
    <string name="name_app">TastyPizza</string>
    <string name="hello_world">hello sworld!</string>
    <string name="menu_name">Меню</string>
    <string name="profile_name">Профиль</string>
    <string name="order_bin_name">Корзина</string>
    <string name="contacts_name">Контакты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_profile">FragmentProfile</string>
    <string name="fragment_menu">fragment_menu</string>
    <string name="fragment_orders">fragment_orders</string>
    <string name="fragment_contacts">fragment_contacts</string>
    <string name="email_input">Введите email</string>
    <string name="password_input">Введите пароль</string>
    <string name="logIn">Войти</string>

    <string name="dish1_desc">Поджаристая чиабатта и знакомое сочетание ветчины, цыпленка, моцареллы со свежими томатами и соусом ранч</string>
    <string name="dish1_name">Тостер Карри</string>
    <string name="dish1_price">99 ₽</string>
    <string name="image_alt">Image with food</string>

    <!-- String for profile, sign in and sign up -->
    <string name="RegisterButton">Регистрация</string>
    <string name="LoginButton">Авторизация</string>
    <string name="prompt_email">Email</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone_number">Телефон</string>
    <string name="choose_date_registry">Выбрать дату рождения</string>
    <string name="male_gender_registry">Мужской</string>
    <string name="female_gender_registry">Женский</string>
    <string name="sms_code">Код</string>
    <string name="send_code">Отправить Код</string>
    <string name="birthday">День рождения</string>
    <string name="tastycoins">Tastycoins</string>
    <string name="notification_profile">Нажмите, чтобы потратить</string>
    <string name="exit_text">Выйти</string>


<!--    Тексты для кнопок в активити деталей блюда-->
    <string name="small_pizza">Маленькая</string>
    <string name="medium_pizza">Средняя</string>
    <string name="large_pizza">Большая</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="numberforcall">Номер для связи с нами +7 (904) 231-54-54</string>


</resources>