<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"

    android:layout_marginTop="22dp"
    >


    <ImageView
        android:id="@+id/menu_item_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"

        android:src="@drawable/dodster"
        android:contentDescription="@string/image_alt" />

    <TextView
        android:id="@+id/menu_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/menu_item_image"
        android:text="@string/dish1_name"
        android:textSize="16sp"
        android:textStyle="bold"

        android:textColor="@color/black" />

    <TextView
        android:id="@+id/menu_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_item_title"
        android:layout_toEndOf="@id/menu_item_image"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/dish1_desc"

        android:textSize="14sp"
        android:textColor="#414E4E" />

    <TextView
        android:id="@+id/menu_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:text="@string/dish1_price"
        android:layout_toEndOf="@+id/menu_item_image"
        android:clickable="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_bg"
        android:focusable="true" />


</RelativeLayout>